feat: add propencity result view, add retrofit api client

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,14 @@
         android:theme="@style/Theme.TourAIJoseph"
         tools:targetApi="31">
         <activity
+            android:name=".PropencityResult"
+            android:exported="false" />
+        <activity
             android:name=".PropencityQuestions"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
